add README + screenshot

--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
           <img class="image__pattern--desktop" src="./images/bg-pattern-desktop.svg" alt="#" />
         </div>
         <img class="image__box--desktop" src="./images/illustration-box-desktop.svg" alt="box" />
-
-        <div class="faq__wrapper">
+        <section class="faq__wrapper">
           <h1>Faq</h1>
           <div class="faq__element">
             <div class="faq__question">
@@ -85,7 +84,7 @@
               </p>
             </div>
           </div>
-        </div>
+        </section>
       </div>
     </main>
   </body>
